[gd_scene load_steps=17 format=3 uid="uid://b1mwkytk3vtfv"]

[ext_resource type="Script" path="res://scenes/pottery_minigame.gd" id="1_53k7s"]
[ext_resource type="Texture2D" uid="uid://bshyfgvx0c87l" path="res://sprite/fire_32.png" id="2_dcs4b"]
[ext_resource type="Texture2D" uid="uid://b5qaijlleuksc" path="res://sprite/inv_pottery_cup_baked.png" id="3_mqwp7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr3p0"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.309804, 0.235294, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmivp"]
bg_color = Color(0.909804, 0.0235294, 0.254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_ln4y1"]
atlas = ExtResource("2_dcs4b")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aaaa"]
atlas = ExtResource("2_dcs4b")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t0y4"]
atlas = ExtResource("2_dcs4b")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp4lo"]
atlas = ExtResource("2_dcs4b")
region = Rect2(108, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxryq"]
atlas = ExtResource("2_dcs4b")
region = Rect2(144, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3asq"]
atlas = ExtResource("2_dcs4b")
region = Rect2(180, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftq3h"]
atlas = ExtResource("2_dcs4b")
region = Rect2(216, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yvku"]
atlas = ExtResource("2_dcs4b")
region = Rect2(252, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0sxg"]
atlas = ExtResource("2_dcs4b")
region = Rect2(288, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2tpc"]
atlas = ExtResource("2_dcs4b")
region = Rect2(324, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_517w0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln4y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aaaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t0y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp4lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxryq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3asq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftq3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yvku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0sxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2tpc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="PotteryMinigame" type="Node2D"]
script = ExtResource("1_53k7s")
heatSpeed = 300.0
closeness = 30

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_top = 75.0
offset_right = 155.0
offset_bottom = 102.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 30.0
show_percentage = false

[node name="Container" type="Panel" parent="CanvasLayer"]
offset_left = 369.0
offset_top = 414.0
offset_right = 808.0
offset_bottom = 456.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lr3p0")

[node name="FireMeter" type="Panel" parent="CanvasLayer"]
offset_left = 371.0
offset_top = 416.0
offset_right = 371.0
offset_bottom = 453.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xmivp")

[node name="HotZone" type="Sprite2D" parent="CanvasLayer"]
top_level = true
position = Vector2(386, 434)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_mqwp7")

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(368, 434)

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(807, 434)

[node name="FireSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(387, 475)
sprite_frames = SubResource("SpriteFrames_517w0")
frame = 1
frame_progress = 0.517348
